@@ -28,6 +28,8 @@ https://github.com/elastic/beats/compare/v6.0.0-alpha1...master[Check the HEAD d
 
 *Affecting all Beats*
 
+- Fix importing the dashboards when the limit for max open files is too low. {issue}4244[4244]
+
 *Filebeat*
 
 *Heartbeat*
